--- a/posts/2015-08-20.md
+++ b/posts/2015-08-20.md
@@ -136,7 +136,7 @@ Let's think. Each of these iterations takes 1500 seconds and there seem to be a 
 
 **137.5 hours?**
 
-Hump that.
+I think this is abotu how long X-Stream would need (modulo hardware), and Chaos should be 32x faster. Hump that.
 
 As it turns out you only need 166 iterations to converge, because each pass of the algorithm above pushes information along any path that is a subsequence of the ordered edges. That distance 330 node would have to be along a path all of whose edges appear in reverse order in the edge order. Instead, about half do. Exactly half, it turns out (the 166th iteration only confirms that we have converged).
 
