--- a/posts/2015-08-20.md
+++ b/posts/2015-08-20.md
@@ -218,7 +218,7 @@ dist[src] > iter && dist[dst] > iter
 ```
 
 However, if both distances equal `iter + 1` the edge is also not interesting; at least one of the two endpoints needs the opportunity to improve.
-A better condition for an edge `(src, dst)` at iteration `iter`
+A better condition for an edge `(src, dst)` at iteration `iter` is
 
 ```
 (dist[src] > iter && dst[dst] > iter + 1) ||
@@ -347,6 +347,8 @@ Let's add up everything that isn't parsing. 1920 seconds, plus 10500 seconds, pl
 
 I get 13,920 seconds. It's all an estimate, but there you go. Everything other than the 1500 seconds of merging is trivially parallelizable, and my oft neglected second core might get some use.
 
+**Edit**: My mistake. We were sorting 4GB last week, not 1.5GB. Sorting 1.5GB of `u64` data takes me 5s. So that's 3500 seconds rather than 10500. We just save 7000 seconds by checking our results; yay science! :D
+
 ### Summing up
 
 Here are the numbers I've got, for various tasks
@@ -354,11 +356,13 @@ Here are the numbers I've got, for various tasks
 |             | Chaos | Order   |
 |-------------|-------|---------|
 | BreadthFirst| ????? | 7800s   |
-| 20xPageRank | ????? | 46600s* |
+| 20xPageRank | ????? | 46600s  |
 | Connectivity| ????? | 1285s   |
-| Layout      |       | 13920s  |
+| Layout      |       | 6920s*  |
 
-*: The PageRank number is a bit stale, as it doesn't reflect the improved decoder. It looks like it should be just over 40,000s, though I haven't done a full run yet.
+The PageRank number is a bit stale, as it doesn't reflect the improved decoder. It looks like it should be just over 40,000s, though I haven't done a full run yet.
+
+*: This used to be 13920 seconds, but I mis-remembered the sorting times from last week. It is much faster. Sorry about that.
 
 Also, you could totally go faster if you just did the decoding on a second thread. It's super easy in Rust, so I'll probably try that out.
 
