--- a/posts/2015-08-20.md
+++ b/posts/2015-08-20.md
@@ -22,6 +22,20 @@ For full disclosure, before you read on and get disappointed: I don't actually h
 
 And if you just want to see my numbers, you can scan to the bottom, just above the hilariously presumptive (but totally legit) moralizing.
 
+---
+
+**Update**: Despite leading with tweets like
+
+![Promises](https://github.com/frankmcsherry/blog/blob/master/assets/order/promises.png)
+
+we have just learned that
+
+![Broken](https://github.com/frankmcsherry/blog/blob/master/assets/order/broken.png)
+
+Amitabha did reveal some PageRank numbers (updated in the text, and in the summary), and also that I should cite X-Stream for one of the steps we take. Details in-line.
+
+---
+
 ### In the first corner: Unordered Scans
 
 One can process graphs by repeatedly scanning edge lists sequentially. No matter which edges you need, you'll see them again in the next pass, so you can do pretty much anything if you don't mind doing a possibly large number of scans.
@@ -41,6 +55,12 @@ It really doesn't matter in what order you process the edges, or even that they 
 My laptop does twenty pagerank iterations over the [Common Crawl hyperlink data](http://webdatacommons.org/hyperlinkgraph/index.html) in about 12.9 hours. Oof. There is no reason thirty two identically configured machines shouldn't be able to crank through the computation in roughly one thirty-second the time. Maybe a bit more because of networks and such.
 
 The point is: this is the sort of thing X-Stream (and Chaos, reportedly) are designed for. If breadth-first search ends up looking like PageRank, my laptop and I are in deep doo-doo.
+
+---
+
+**Update**: The Chaos number for twenty iterations of PageRank is 6220 seconds, "unoptimized" (?). This is about one eighth of the laptop time above, so absolutely better.
+
+---
 
 ### In the other corner: Ordered Edges
 
@@ -190,6 +210,22 @@ Hey, our computer has "memory", right? Not enough to fit the whole graph, of cou
     Echidnatron%
 
 Oh cool. 13,994.77 seconds. That's about four hours. Kinda decent, maybe?
+
+---
+
+**Update**: Amitabha would like to call attention to Section 5.3, paragraph 4 of [the X-Stream paper](http://infoscience.epfl.ch/record/188535/files/paper.pdf), which is totally fair. I think what he is refering to is
+
+> Exploring generic stream compression algorithms as well as those specific to graphs [11], or performing extra passes to eliminate those edges that are no longer needed are important avenues of exploration we are pursuing to reduce wastage in X-Stream.
+
+If it turns out that Chaos has a general way of doing this, I'll be delighted. It is a hard problem, and the solutions seem to be different for each problem. Vertex values don't stabilize for the same reasons in BFS as they do in Label Propagation as they do in PageRank, and if they've developed a general purpose solution for that, awesome. On the other hand, the quote is from a section discussing the wastage in BFS on geometric graphs (road networks) where the problem is that most edges don't actually become inactive early, the graphs just have fundamentally large diameter, which challenges approaches that can only do scans.
+
+Paragraph 5 continues:
+
+>  We conclude that X-Stream is an efficient way to execute a variety of algorithms on real-world graphs, its only limitation being graphs whose structure requires a large number of iterations.
+
+I just want to call out a little bit of bias here. The `union_find` algorithm requires just one pass. I don't think the number of iterations is the issue, but rather being forced to use a certain type of iteration. More on this later.
+
+---
 
 ### A wild tweeter appears!
 
@@ -347,22 +383,30 @@ Let's add up everything that isn't parsing. 1920 seconds, plus 10500 seconds, pl
 
 I get 13,920 seconds. It's all an estimate, but there you go. Everything other than the 1500 seconds of merging is trivially parallelizable, and my oft neglected second core might get some use.
 
-**Edit**: My mistake. We were sorting 4GB last week, not 1.5GB. Sorting 1.5GB of `u64` data takes me 5s. So that's 3500 seconds rather than 10500. We just save 7000 seconds by checking our results; yay science! :D
+---
+
+**Edit**: My mistake. We were sorting 4GB last week, not 1.5GB. Sorting 1.5GB of `u64` data takes me 5s. So that's 3500 seconds rather than 10500. We just saved 7000 seconds by double-checking our results; yay science! :D
+
+---
 
 ### Summing up
 
 Here are the numbers I've got, for various tasks
 
-|             | Chaos | Order   |
-|-------------|-------|---------|
-| BreadthFirst| ????? | 7800s   |
-| 20xPageRank | ????? | 46600s  |
-| Connectivity| ????? | 1285s   |
-| Layout      |       | 6920s*  |
+|             | Chaos | Order   | FlashGraph |
+|-------------|-------|---------|------------|
+| BreadthFirst| ????? | 7800s   | 351s       |
+| 20xPageRank | 6220s | 46600s  | 3005**     |
+| Connectivity| ????? | 1285s   | 820s       |
+| Layout      |   0?  | 6920s*  |    ?????   |
+
+I've added some numbers for [FlashGraph](https://github.com/icoming/FlashGraph/), taken from [their performance page](https://github.com/icoming/FlashGraph/wiki/FlashGraph-performance). FlashGraph is a neat single-box system that uses an array of SSDs to get substantially higher throughput than I can. It avoids the restriction to sequential scans, which makes me super happy.
 
 The PageRank number is a bit stale, as it doesn't reflect the improved decoder. It looks like it should be just over 40,000s, though I haven't done a full run yet.
 
 *: This used to be 13920 seconds, but I mis-remembered the sorting times from last week. It is much faster. Sorry about that.
+
+**: The FlashGraph numbers are for 30 iterations (I multiplied their number by 2/3), and in their paper they mention vertices that cease producing updates, making it possible that they are doing an approximate PageRank. If anyone knows specifics, fill me in.
 
 Also, you could totally go faster if you just did the decoding on a second thread. It's super easy in Rust, so I'll probably try that out.
 
