--- a/posts/2015-08-20.md
+++ b/posts/2015-08-20.md
@@ -402,7 +402,7 @@ Here are the numbers I've got, for various tasks
 
 I've added some numbers for [FlashGraph](https://github.com/icoming/FlashGraph/), taken from [their performance page](https://github.com/icoming/FlashGraph/wiki/FlashGraph-performance). FlashGraph is a neat single-box system that uses an array of SSDs to get substantially higher throughput than I can. It avoids the restriction to sequential scans, which makes me super happy.
 
-I've had a request to note the hardware, which is a good point before anyone runs off and draws conclusions about Chaos vs FlashGraph. FlashGraph uses an array of 15 SSDs, and 512 GB of RAM. We don't know what Chaos uses, except that it is 32 machines. It will be good to learn when you should put all of your money into one box, and when you should spread it out over several.
+I've had a request to note the hardware, which is a good point before anyone runs off and draws conclusions about Chaos vs FlashGraph. FlashGraph uses an array of 15 SSDs, and 512 GB of RAM. We don't know what Chaos uses, except that it is 32 machines. It will be good to learn when you should put all of your money into one box, and when you should spread it out over several (and when it really doesn't matter enough to get worked up).
 
 My PageRank number is a bit stale, as it doesn't reflect the improved decoder. It looks like it should be just over 40,000s, though I haven't done a full run yet.
 
