--- a/posts/2015-08-20.md
+++ b/posts/2015-08-20.md
@@ -100,7 +100,7 @@ The Hilbert curve layout has a nice locality property, that nearby edges in the 
 
 **Note**: This isn't exactly true of all the `roots` pointer chasing, as written. But, the Hilbert-curve order does ensure that after each power-of-two number of nodes, we have discovered the full connectivity structure on the graph restricted to those nodes; each node might as well point directly to its root (and we could do that in a sequential pass over `roots`, if it were important).
 
-The standard approach to connectivity in an unordered scan setting is the "label propagation" algorithm. This approach repeatedly circulates node ids around the graph, converging in a number of iterations no less than the distance from the best-labeled node to any other node. In the Common Crawl data, there seems to be a vertex at distance 330 from vertex zero, so naive label propagation shouldn't expect to do fewer than 330 iterations, and cant' do fewer than 165 (if it prioritized the label of the midpoint of the 330 long path).
+The standard approach to connectivity in an unordered scan setting is the "label propagation" algorithm. This approach repeatedly circulates node ids around the graph, converging in a number of iterations no less than the distance from the best-labeled node to any other node. In the Common Crawl data, there seems to be a vertex at distance 330 from vertex zero, so naive label propagation shouldn't expect to do fewer than 330 iterations, and can't do fewer than 165 (if it prioritized the label of the midpoint of the 330 long path).
 
 By comparison, the union-find code above does one scan through the graph. Even if thirty two machines take one thirty-second the time of my laptop, the union find approach will still be ten times faster.
 
@@ -273,7 +273,7 @@ It turns out we were weirdly lucky with our `1 << 30` threshold above: there are
 
 **Historical note**: the "mustache wager" was offered before I knew if this would be the case; that is how dangerous I like to live.
 
-The more cynical among you might worry that I picked a good threshold after seeing the data, and fair enough. So lets's make it right.
+The more cynical among you might worry that I picked a good threshold after seeing the data, and fair enough. So let's make it right.
 
 The right thing to do here is use our brains again, and remember that we have a one-pass connected components routine just a few screens up. We'll run that as part of the first iteration, and then set the distance of any unreachable vertices to `0`; that will make sure their edges are never interesting, and we won't mistake them for actually being the root at the end of the computation. This shaves out 800 million edges early on, which means we can meet that `1 << 30` threshold sooner.
 
@@ -362,7 +362,7 @@ I just did some profiling, and found that I could parse a line containing a pair
 
     test parse ... bench:         224 ns/iter (+/- 36)
 
-If we do the math, that is about eight hours just for parsing the text. Thanks, people who produce text data.
+If we do the math, that is about eight hours just for parsing the text. Thanks, people who produce binary data as text.
 
 This compares with Hilbert transformation costs of
 
@@ -416,7 +416,7 @@ Also, you could totally go faster if you just did the decoding on a second threa
 
 To the extent that the single-threaded code did well, it was because we took advantage of our ability to write programs as we see fit. This is a super-powerful ability, and not one that computer scientists should so quickly dispose of. Restrictive programming models make it easier to write apparently efficient systems, but if that efficiency comes by forcing you to write shit programs, we haven't obviously improved the world yet.
 
-I think [Naiad](http://dl.acm.org/citation.cfm?id=2522738) is awesome, not primarily because it had a [rawking implementation](https://github.com/MicrosoftResearch/Naiad), but because it let you do things you couldn't do with other systems. The horribly bad label-propagation algorithm can become the actually sane *prioritized* label propagation, once you can explain which labels to process each iteration. You get a factor of ten reduction in data exchanged and compute done just by using a better algorithm. Alternately, if you want to incrementalize your computation, you don't need to build a brand new system, you just need to start writing [incremental implementations](https://github.com/frankmcsherry/differential-dataflow), because you can totally just do that.
+I think [Naiad](http://dl.acm.org/citation.cfm?id=2522738) is awesome, not primarily because it had a [rawking implementation](https://github. com/TimelyDataflow/Naiad), but because it let you do things you couldn't do with other systems. The horribly bad label-propagation algorithm can become the actually sane *prioritized* label propagation, once you can explain which labels to process each iteration. You get a factor of ten reduction in data exchanged and compute done just by using a better algorithm. Alternately, if you want to incrementalize your computation, you don't need to build a brand new system, you just need to start writing [incremental implementations](https://github.com/frankmcsherry/differential-dataflow), because you can totally just do that.
 
 I really think that in addition to tightly tuned systems like Chaos, we need to make sure to keep moving towards more expressive systems like Naiad. Otherwise we are cashing in all sort of great algorithms just so we can draw straighter scaling plots.
 
