--- a/posts/2015-08-20.md
+++ b/posts/2015-08-20.md
@@ -265,7 +265,7 @@ That seems pretty minor, but the number of vertices still in play drops pretty f
 
 This saves us one pass over the data.
 
-#### Being an better person
+#### Being a better person
 
 This "active edges" approach only really works because we reach most of the graph. If there were two disconnected components, we'd never actually get to a small number of edges, because all the edges between unreachable vertices would always appear active.
 
