da zheng update

--- a/posts/2015-08-20.md
+++ b/posts/2015-08-20.md
@@ -364,6 +364,16 @@ I just did some profiling, and found that I could parse a line containing a pair
 
 If we do the math, that is about eight hours just for parsing the text. Thanks, people who produce binary data as text.
 
+---
+**Update**: This example was bad. I was doing an allocation I could have avoided (in the string splitting). Rust actually makes this easy (by providing an iterator over `str` references, rather than an owned string), but I was sloppy! The better numbers are:
+
+    test parse ... bench:         145 ns/iter (+/- 30)
+
+Five hours instead of eight! In case you were wondering where the time goes in your higher-level language...
+
+---
+
+
 This compares with Hilbert transformation costs of
 
     test encode_h        ... bench:          15 ns/iter (+/- 2)
@@ -395,9 +405,9 @@ Here are the numbers I've got, for various tasks
 
 |             | Chaos | Order   | FlashGraph |
 |-------------|-------|---------|------------|
-| BreadthFirst| ????? | 7800s   | 351s       |
-| 20xPageRank | 6220s | 46600s  | 3005**     |
-| Connectivity| ????? | 1285s   | 820s       |
+| BreadthFirst| ????? | 7800s   | 298s       |
+| 20xPageRank | 6220s | 46600s  | 1306**     |
+| Connectivity| ????? | 1285s   | 461s       |
 | Layout      |   0?  | 6920s*  |    ?????   |
 
 I've added some numbers for [FlashGraph](https://github.com/icoming/FlashGraph/), taken from [their performance page](https://github.com/icoming/FlashGraph/wiki/FlashGraph-performance). FlashGraph is a neat single-box system that uses an array of SSDs to get substantially higher throughput than I can. It avoids the restriction to sequential scans, which makes me super happy.
@@ -411,6 +421,12 @@ Also, you could totally go faster if you just did the decoding on a second threa
 *: This used to be 13920 seconds, but I mis-remembered the sorting times from last week. It is much faster. Sorry about that.
 
 **: The FlashGraph numbers are for 30 iterations (I multiplied their number by 2/3), and in their paper they mention vertices that cease producing updates, making it possible that they are doing an approximate PageRank. If anyone knows specifics, fill me in.
+
+---
+
+**Update** Da Zheng (behind FlashGraph) got in touch and reports that their performance numbers improved for [their FAST paper](https://www.usenix.org/system/files/conference/fast15/fast15-paper-zheng.pdf), and updated the FlashGraph wiki. This improved most of their numbers. He also confirmed that it is an approximate PageRank.
+
+---
 
 ### Conclusions
 
