da zheng update

--- a/posts/2015-08-20.md
+++ b/posts/2015-08-20.md
@@ -424,7 +424,7 @@ Also, you could totally go faster if you just did the decoding on a second threa
 
 ---
 
-**Update** Da Zheng (behind FlashGraph) got in touch and reports that their performance numbers improved for [their FAST paper](https://www.usenix.org/system/files/conference/fast15/fast15-paper-zheng.pdf), and updated the FlashGraph wiki. This improved most of their numbers. He also confirmed that it is an approximate PageRank.
+**Update** Da Zheng (behind FlashGraph) got in touch and reports that their performance numbers improved for [their FAST paper](https://www.usenix.org/system/files/conference/fast15/fast15-paper-zheng.pdf), and updated the FlashGraph wiki. This improved their numbers quite a bit. He also confirmed that it is an approximate PageRank.
 
 ---
 
