--- a/posts/2015-09-14.md
+++ b/posts/2015-09-14.md
@@ -433,6 +433,6 @@ These two nested scopes also lead to the use of `enter` and `leave`. To use a st
 
 We've now seen a bit about building up progressively weirder and weirder timely dataflow computations. However, we haven't gotten to one of the most important parts of timely dataflow, which is that the operators themselves can respond to the sort of progress information `probe` returns. This is a critical component of implementing "map-reduce" like computations, where some operators want to wait until they have received all of the data they are going to receive.
 
-In the next post we will put together a streaming, incremental, word-count application to get a feel for how these programs look, and how they perform.
+In the next post we will put together a streaming, incremental, word-count application to get a feel for how you can write your own operators. It will not be hard! (lots easier than Naiad, for sure). We will also take the opportunity to look at the resulting performance characteristics; will there be weird hiccups due to garbage collection? (spoiler alert: nope).
 
 Until then, feel free to fire off any questions, complaints, things of that sort.
