--- a/posts/2015-09-14.md
+++ b/posts/2015-09-14.md
@@ -1,6 +1,6 @@
 ## An introduction to timely dataflow
 
-I realized that I haven't actually done a proper introduction to timely dataflow, as it exists in its Rust incarnation. I'm going to start to fix that today, showing most of the moving parts over a sequence of posts, with a bit of explanation where it makes sense.
+I realized that I haven't actually done a proper introduction to timely dataflow, [as it exists in its Rust incarnation](https://github.com/frankmcsherry/timely-dataflow). I'm going to start to fix that today, showing most of the moving parts over a sequence of posts, with a bit of explanation where it makes sense. I should warn you that the code, documentation, tests are all alpha quality; you can (and should!) play around with them, but anything more than that and I'd be concerned.
 
 The main goal of this project, other than to learn Rust (success!), is to put together a re-usable infrastructure for research in data-parallel computation. There are a bunch of non-goals, like to make programs as short as possible, or make a start-up worthy artifact, or to write a ton of incremental papers. But it is a good question to ask as we go: "tell me again, why are we doing all of this?"
 
