--- a/posts/2015-09-18.md
+++ b/posts/2015-09-18.md
@@ -29,7 +29,7 @@ The `timely::example` method lets you specify an action on a `Scope` which timel
 
 The new `ToStream` trait provides a `to_stream` method for any iterator, and it turns the iterator into a stream in whatever scope is passed as an argument. This makes it a lot easier to put together a functional example that actually does a thing. In this case, we should print ten lines to the console, for the numbers `0` through `9`.
 
-### Pre-packaged operators
+### Review: pre-packaged operators
 
 We've previously used a few different flavors of "operator": some method that acts on a `Stream` and produces a new `Stream`. For example, just above we used `inspect`, which is [something I've written](https://github.com/frankmcsherry/timely-dataflow/blob/master/src/dataflow/operators/inspect.rs), and you only get to use as presented.
 
@@ -152,7 +152,7 @@ But, when should we clean it up? We can't just clear it at the end of the closur
 
 We need to wait until we are sure that the operator will receive no more messages with a given `time`. Once that happens, we can pop the data for `time` from the `counts_by_time` hash map, allowing Rust to deallocate it.
 
-But. How can we tell if we have seen all the messages or not? This is a global property of the system, rather than a local property of the operator (or even the worker).
+But. How can we tell if we have seen all the messages or not? This is a global property of the system, rather than a local property of the operator (or even the worker). It kind of seems like we need some help to get this information.
 
 Now is where the timely dataflow happens.
 
@@ -169,7 +169,7 @@ The `unary_notify` operator takes similar arguments as `unary_stream`, with some
 3. An initial set of notification requests (usually empty).
 4. What the operator should do with its `input`, `output`, and `notificator` when it gets a chance to run.
 
-Ok, great. Got it. Thanks. WAIT WHAT IS A `notificator`?
+Ok, great. Pretty much the same. Got it. WAIT WHAT IS A `notificator`?
 
 It's all cool. A `notificator` is just the thing that your operator uses to ask for notifications, and which gives your operator any notifications that are ready to fire. It may sound weird, but it is pretty natural to use. And if it turns out there are better patterns, it's all pretty easy to change, too.
 
@@ -198,7 +198,7 @@ Here is a version of our distinct logic that cleans up `counts_by_time` once the
 })
 ```
 
-All we had to do was ask to be notified for each time we might have to clean up, and then tell `notificator` to do the clean-up for each time that has completed.
+All we had to do was ask to be notified for each time we might have to clean up, and then tell `notificator` to do the clean-up for each time that has completed. The only important thing to know is that the notificator will only respond to requests that you make. You have to explicitly make them. Sorry.
 
 Behind the scenes, timely is keeping track of all of the outstanding messages (and notifications, because those can turn in to messages). It is doing this even if your operator doesn't need notifications, because other operators downstream might.
 
