--- a/posts/2015-09-18.md
+++ b/posts/2015-09-18.md
@@ -200,7 +200,7 @@ Here is a version of our distinct logic that cleans up `counts_by_time` once the
 
 All we had to do was ask to be notified for each time we might have to clean up, and then tell `notificator` to do the clean-up for each time that has completed. The only important thing to know is that the notificator will only respond to requests that you make. You have to explicitly make them. Sorry.
 
-Behind the scenes, timely is keeping track of all of the outstanding messages (and notifications, because those can turn in to messages). It is doing this even if your operator doesn't need notifications, because other operators downstream might.
+Behind the scenes, timely is keeping track of all of the outstanding messages (and notifications, because those can turn in to messages). It is doing this even if your operator doesn't need notifications, because other operators downstream might. This also means that you get to start *using* notifications right away; you don't have to revisit other parts of your program (or someone else's) and figure out if they understand notifications.
 
 ### Counting words
 
