--- a/posts/2015-09-18.md
+++ b/posts/2015-09-18.md
@@ -250,7 +250,7 @@ There will need to be a post in the future about the ownership life-cycle of dat
 
 ### Other generic operators
 
-There are also `binary_stream` and `binary_notify` operators. They have two inputs, and need you to specify two partitioning functions, and a closure that takes two inputs (plus an output and maybe a notificator). Otherwise, they are pretty much what you would expect, I think.
+There are also `binary_stream` and `binary_notify` operators. They have two inputs, and need you to specify two partitioning functions, and a closure that takes two inputs (plus an output and maybe a notificator). Otherwise, they are pretty much what you would expect, I think. Actually, I have no idea what you would expect. I'll show you `binary_notify` in the next post, though.
 
 Building more generic operators requires stepping in to the black pit that is actually writing raw timely dataflow code (manually connecting streams and operators). It's not *that* horrible, but it is a quantum leap more complicated than using the pre-fab solutions we've discussed so far.
 
