--- a/posts/2015-09-18.md
+++ b/posts/2015-09-18.md
@@ -25,7 +25,7 @@ fn main() {
 
 Ok wow very short.
 
-The `timely::example` method lets you specify an action on a `Scope` which timely then runs single-threaded. You don't have to worry about starting up the computation, providing configuration arguments, figuring out that you should probably called `scoped`, etc. You just write a small amount of code using the scope, and then it gets run.
+The `timely::example` method lets you specify an action on a `Scope` which timely then runs single-threaded. You don't have to worry about starting up the computation, providing configuration arguments, figuring out that you should probably call `scoped`, etc. You just write a small amount of code using the scope, and then it gets run.
 
 The new `ToStream` trait provides a `to_stream` method for any iterator, and it turns the iterator into a stream in whatever scope is passed as an argument. This makes it a lot easier to put together a functional example that actually does a thing. In this case, we should print ten lines to the console, for the numbers `0` through `9`.
 
