--- a/posts/2015-09-18.md
+++ b/posts/2015-09-18.md
@@ -158,7 +158,7 @@ Now is where the timely dataflow happens.
 
 ### Timely dataflow happening
 
-Pretty much everything up until this point was just us shoveling messages around, and anyone can shovel message around. We need to start writing better programs, though, and this calls for a system with a broader set of features.
+Pretty much everything up until this point was just us shoveling messages around, and anyone can shovel messages around. We need to start writing better programs, though, and this calls for a system with a broader set of features.
 
 To get access to timely dataflow magic, we are going to start using the `unary_notify` operator. It is a lot like `unary_stream`, with the additional ability to request and receive notifications from the system about "progress" in its input stream of messages. The operator can ask to be notified when there will be no more messages with some timestamp, and the system will do exactly that.
 
