remove ref to hash::hash

--- a/posts/2015-09-18.md
+++ b/posts/2015-09-18.md
@@ -219,7 +219,7 @@ fn hash<T: Hash>(item: &T) -> u64 {
 Putting `hash` into the `Exchange::new()`, and sending the counts in the notification, our code now looks like this:
 
 ```rust
-.unary_notify(Exchange::new(|x| ::std::hash::hash(x)), "StringCount", vec![], move |input, output, notificator| {
+.unary_notify(Exchange::new(|x| hash(x)), "StringCount", vec![], move |input, output, notificator| {
     input.for_each(|&time, data| {
         notificator.notify_at(time);
         let mut counts = counts_by_time.entry(time)
