Fixed a couple typos

--- a/posts/2015-09-14.md
+++ b/posts/2015-09-14.md
@@ -101,7 +101,7 @@ In this case, we start with a blank dataflow canvas, `computation`, but we want 
 
 Within the scope, the `new_input()` method gives us a pair of input handle and data stream, the former is how our program will introduce records into the dataflow, and the latter is a handle to the dataflow stream, which we can use to define further dataflow computation. Importantly, at this point we don't have any data, we are just defining what should happen with it when it shows up. We return the input handle.
 
-It might seem that you could totally dodge this "scope" complexity for a hello-world program. For example, many streaming systems just allow each operator to receive an arbitrary sequence of input records. This ends up being quite limiting, and being more explicit about different scopes allow use to write much cooler programs in timely, but later. Not yet. By the end of the post we'll be doing something most of them can't easy do.
+It might seem that you could totally dodge this "scope" complexity for a hello-world program. For example, many streaming systems just allow each operator to receive an arbitrary sequence of input records. This ends up being quite limiting, and being more explicit about different scopes allows us to write much cooler programs in timely, but later. Not yet. By the end of the post we'll be doing something most of them can't easily do.
 
 ### Executing the dataflow graph
 
