--- a/posts/2015-09-21.md
+++ b/posts/2015-09-21.md
@@ -1,5 +1,7 @@
 ## An introduction to timely dataflow, part 3.
 
+This post is the third in a series ([part 1](https://github.com/frankmcsherry/blog/blob/master/posts/2015-09-14.md), [part 2](https://github.com/frankmcsherry/blog/blob/master/posts/2015-09-18.md)) about writing timely dataflow programs. 
+
 Today we are going to take what we've learned about timely dataflow for a spin, and write a "real program": breadth-first search on random graphs.
 
 Ok, so you see the quotes, right? Clearly this could be *more* real, but we'll do this to learn about using timely dataflow, and then you can take it to the real problems and get all the fame and fortune and bug reports.
@@ -38,17 +40,17 @@ for _ in 0..edges {
 
 This is a random graph. Technically, it is a member of the *G(n, m)* family of random graphs, which just means that you have *n* nodes and *m* edges chosen at random.
 
-There are other models from random graphs, with the most common being *G(n, p)* which has *n* nodes and each possible pair exists independently with probability *p*. It is more of a pain to produce this sort of graph accurately, and there are some theoretical results that say that there aren't too many things that distinguish the two models. There is a whole cottage industry of random graph models that "look like real graphs" (but invariable don't), and we are just going to ignore all of that for this post.
+There are other models from random graphs, with the most common being *G(n, p)* which has *n* nodes and each possible pair exists independently with probability *p*. It is more of a pain to produce this sort of graph accurately, and there are some theoretical results that say that there aren't too many things that distinguish the two models. There is a whole cottage industry of random graph models that "look like real graphs" (but invariably don't), and we are just going to ignore all of that for this post.
 
 #### Breadth-first search
 
-Given a graph, random or otherwise, we might be interested to learn something about its structure (less so with random graphs, but let's pretend).
+Given a graph, random or otherwise, we might be interested to learn something about its structure (let's pretend).
 
-One pretty easy thing to ask is, for some specific node, how many edges do you need to traverse on the path to each of the other nodes? That is, if I start from node *i* and want to reach node *j*, how few edges do I need to traverse? There could be lots of long paths, but we want to know about the shortest path, from one node to each of the other nodes.
+One pretty easy thing to ask is, from some specific node, for each other node how few edges must you traverse to go from one to the other? Perhaps even, for each of those other nodes, which immediately adjacent node leads you most directly to that specific node? This problem is often solved by "breadth-first search".
 
 You can do breadth-first search in a few ways, but we are going to go for the simplest: we'll start from the source node, and repeatedly expand the set of reachable nodes by one step. Each node that is reachable can cause each of its immediate neighbors (nodes with which it shares an edge) to become reachable in one step.
 
-Let's write down some pseudo-code to do this, where we track the "parent" of each node: that is, the other node that lead us to it.
+Let's write down some pseudo-code to do this, where we track the node that lead us to it.
 
 ```rust
 let mut done = vec![None; nodes];
@@ -82,7 +84,7 @@ We have the problem that the `todo` queue is not shared, but we can change that 
 
 So, this is almost already a nice data-parallel algorithm. We do need to introduce the use of channels and make the data movement more explicit, and we need a little more structure to recover the "first in, first out" property we were exploiting to make sure we saw nodes in breadth-first order. We want each worker to process all round *d* messages from each worker before processing any round *d+1* messages.
 
-That sounds a bit like notifications, from the previous post, right?
+That sounds a bit like notifications, from [the previous post](https://github.com/frankmcsherry/blog/blob/master/posts/2015-09-18.md), right?
 
 ### BFS in timely dataflow
 
